hotfix: added overflow-y: scroll to avoid horizontal jump in hero animation on IE

--- a/app/_scss/ui/_layout.scss
+++ b/app/_scss/ui/_layout.scss
@@ -9,6 +9,10 @@ body {
 	height: 100%;
 }
 
+body {
+	overflow-y: scroll;
+}
+
 .browsehappy	 {
 	position: absolute;
 	z-index: 999999;
